fix spacing on dropdown menu

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -72,7 +72,6 @@ ul li {
 
 .arrow:hover {
     fill: white;
-    stroke: white;
 }
 
 .menu {
@@ -111,9 +110,11 @@ text-align: left;
 }
 
 .menu-divider {
-    padding-top:10px;
-    border-bottom: 1px solid #A1A9B5
+    margin-top: 3px;
+    margin-bottom: 3px;
+    border-top: 1px solid #A1A9B5
 }
+
 
 .dropdown-link {
     color: #242D38;
